--- a/E-Commerce.UI.WEB/Views/Order/Detail.cshtml
+++ b/E-Commerce.UI.WEB/Views/Order/Detail.cshtml
@@ -1,69 +1,16 @@
 ﻿@model E_Commerce.Core.Model.Entity.Order
 @{
     ViewBag.Title = "Detail";
+    string cancelLink = "";
+    if (Model.Status.ID != 8 && Model.Status.ID != 6 && Model.Status.ID != 7)
+    {
+        cancelLink = $"/Order/OrderCancel/{Model.ID}";
+    }
 }
 
-<h1 class="text-center mb-4">Ödeme Detayları</h1>
-<hr />
 
-<h2>Your order<b>@Model.ID  </b> status: @Model.Status.Name</h2>
 
-<div class="row">
-    <div class="col-md-8 offset-md-2">
-        <h5>Alışveriş Detayları</h5>
-        <hr>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Product Name</th>
-                    <th>Quantity</th>
-                    <th>Discount</th>
-                    <th>Tax</th>
-                    <th>Price</th>
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    foreach (var item in Model.OrderProducts)
-                    {
-                        <tr>
-                            <td> @item.Product.Name </td>
-                            <td> @item.Quantity </td>
-                            <td> @item.Product.TotalPrice </td>
-                            <td> @item.Product.Tax </td>
-                            <td> @item.Product.Price </td>
-                        </tr>
-                    }
-                }
 
-            </tbody>
-        </table>
-
-        <hr>
-        <div class="row">
-            <div class="col-6">Total</div>
-            <div class="col-6 text-right">$ @Model.TotalProductPrice.ToString("##,##") </div>
-        </div>
-        <div class="row">
-            <div class="col-6">TAX</div>
-            <div class="col-6 text-right">$ @Model.TotalTaxPrice.ToString("##,##") </div>
-        </div>
-        <div class="row">
-            <div class="col-6">Dicount</div>
-            <div class="col-6 text-right">$ @Model.TotalDiscount.ToString("##,##") </div>
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col-6"><strong>Total Price</strong></div>
-            <div class="col-6 text-right"><strong>$ @Model.TotalPrice.ToString("##,##")</strong></div>
-        </div>
-        <hr>
-        <form>
-            <!-- Ödeme bilgileri formu -->
-            <!-- ... -->
-            <a href="/Order/Pay?id=@Model.ID" class="btn btn-primary btn-block">Go Pay</a>
-        </form>
-    </div>
     <!--------------- blog-tittle-section---------------->
     <section class="blog about-blog">
         <div class="container">
@@ -86,8 +33,25 @@
 
                     <div class="col-lg-12">
                         <div class="checkout-wrapper">
-                            <a href="#" class="shop-btn">Enter Coupon Code</a>
+
                             <div class="account-section billing-section">
+                                <div class="card-body text-center">
+                                    <h4 class="card-title mb-0">Order Information</h4>
+                                    <p class="card-text">Order Number: <strong><span style="font-size: 18px;">@Model.ID</span></strong></p>
+                                    <p class="card-text">Status: <span class="badge bg-primary" style="font-size: 16px;">@Model.Status.Name</span></p>
+                                    @if (!string.IsNullOrEmpty(cancelLink))
+                                    {
+                                        if (Model.StatusID != 17)
+                                        {
+                                            <br />
+                                            <a href="@cancelLink" class="btn btn-danger btn-lg">Request Cancel</a>
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <p class="card-text"><span class="badge bg-info">You cannot cancel this order</span></p>
+                                    }
+                                </div>
                                 <h5 class="wrapper-heading">Order Summary</h5>
                                 <div class="order-summery">
                                     <div class="subtotal product-total">
@@ -107,7 +71,7 @@
                                                             <p class="paragraph"> @item.Quantity  *  @item.Product.TotalPrice</p>
                                                         </div>
                                                         <div class="price">
-                                                            <h5 class="wrapper-heading">$ @totalPrice</h5>
+                                                            <h5 class="wrapper-heading">🪙 @totalPrice</h5>
                                                         </div>
                                                     </li>
                                                 }
@@ -118,7 +82,7 @@
                                     <hr>
                                     <div class="subtotal product-total">
                                         <h5 class="wrapper-heading">SUBTOTAL</h5>
-                                        <h5 class="wrapper-heading">$365</h5>
+                                        <h5 class="wrapper-heading">🪙365</h5>
                                     </div>
                                     <div class="subtotal product-total">
                                         <ul class="product-list">
@@ -129,7 +93,7 @@
 
                                                 </div>
                                                 <div class="price">
-                                                    <h5 class="wrapper-heading">+$0</h5>
+                                                    <h5 class="wrapper-heading">+🪙0</h5>
                                                 </div>
                                             </li>
                                         </ul>
@@ -137,54 +101,21 @@
                                     <hr>
                                     <div class="subtotal product-total">
                                         <h5 class="wrapper-heading">Total</h5>
-                                        <h5 class="wrapper-heading price">$ @Model.TotalProductPrice.ToString("##,##")</h5>
+                                        <h5 class="wrapper-heading price">🪙 @Model.TotalProductPrice</h5>
                                     </div>
                                     <div class="subtotal product-total">
                                         <h5 class="wrapper-heading">Tax</h5>
-                                        <h5 class="wrapper-heading price">$ @Model.TotalTaxPrice.ToString("##,##") </h5>
+                                        <h5 class="wrapper-heading price">🪙 @Model.TotalTaxPrice</h5>
                                     </div>
                                     <div class="subtotal product-total">
                                         <h5 class="wrapper-heading">Dicount</h5>
-                                        <h5 class="wrapper-heading price">$ @Model.TotalDiscount.ToString("##,##")</h5>
+                                        <h5 class="wrapper-heading price">🪙 @Model.TotalDiscount</h5>
                                     </div>
                                     <div class="subtotal total">
                                         <h5 class="wrapper-heading">TOTAL PRİCE</h5>
-                                        <h5 class="wrapper-heading price">$ @Model.TotalPrice.ToString("##,##")</h5>
+                                        <h5 class="wrapper-heading price">🪙 @Model.TotalPrice</h5>
                                     </div>
-                                    <div class="subtotal payment-type">
-                                        <div class="checkbox-item">
-                                            <input type="radio" id="bank" name="bank">
-                                            <div class="bank">
-                                                <h5 class="wrapper-heading">Direct Bank Transfer</h5>
-                                                <p class="paragraph">
-                                                    Make your payment directly into our bank account.
-                                                    Please use
-                                                    <span class="inner-text">
-                                                        your Order ID as the payment reference.
-                                                    </span>
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="checkbox-item">
-                                            <input type="radio" id="cash" name="bank">
-                                            <div class="cash">
-                                                <h5 class="wrapper-heading">Cash on Delivery</h5>
-                                            </div>
-                                        </div>
-                                        <div class="checkbox-item">
-                                            <input type="radio" id="credit" name="bank">
-                                            <div class="credit">
-                                                <h5 class="wrapper-heading">Credit/Debit Cards or Paypal</h5>
-                                            </div>
-                                        </div>
-                                        <div class="checkbox-item">
-                                            <input type="radio" id="coin" name="bank">
-                                            <div class="credit">
-                                                <h5 class="wrapper-heading">Recycle Coin</h5>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <a href="#" class="shop-btn">Place Order Now</a>
+
                                 </div>
                             </div>
                         </div>
