--- a/E-Commerce.UI.WEB/Views/Order/Index.cshtml
+++ b/E-Commerce.UI.WEB/Views/Order/Index.cshtml
@@ -30,7 +30,7 @@
                                             </td>
                                             <td class="table-wrapper">
                                                 <div class="table-wrapper-center">
-                                                    <h5 class="table-heading">TIME</h5>
+                                                    <h5 class="table-heading">Date</h5>
                                                 </div>
                                             </td>
                                             <td class="table-wrapper">
@@ -56,10 +56,10 @@
                                                     <p class="ticket-info"> @Html.DisplayFor(modelItem => item.Status.Name)</p>
                                                 </td>
                                                 <td class="table-wrapper">
-                                                    <p class="ticket-info">@Html.DisplayFor(modelItem => item.TotalPrice)</p>
+                                                    <p class="ticket-info">@Html.DisplayFor(modelItem => item.CreatedDate)</p>
                                                 </td>
                                                 <td class="table-wrapper">
-                                                    <p class="ticket-info"> @Html.DisplayFor(modelItem => item.TotalPrice)</p>
+                                                    <p class="ticket-info">🪙 @Html.DisplayFor(modelItem => item.TotalPrice)</p>
                                                 </td>
                                                 <td class="table-wrapper">
                                                     <p class="ticket-info"> @Html.DisplayFor(modelItem => item.UserAddress.Title)</p>
