--- a/E-Commerce.UI.WEB/Views/Pay/Index.cshtml
+++ b/E-Commerce.UI.WEB/Views/Pay/Index.cshtml
@@ -25,11 +25,11 @@
             {
                 if ((bool)ViewBag.Result)
                 {
-                    <img src="~/Themefiles/assets/images/success.gif" />
+                    <img src="~/Themefiles/assets/images/success.gif"  style="width:300px;" />
                 }
                 else
                 {
-                    <img src="~/Themefiles/assets/images/error.gif" />
+                    <img src="~/Themefiles/assets/images/error.gif"  style="width:300px;" />
                 }
             }
             <h2>@ViewBag.PaymentMessage</h2>
