--- a/E-Commerce.UI.WEB/Views/Shared/_Header.cshtml
+++ b/E-Commerce.UI.WEB/Views/Shared/_Header.cshtml
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="header-center">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="./assets/images/logos/logo.webp" alt="logo">
                     </a>
                 </div>
@@ -48,7 +48,6 @@
                         <div class="modal-wrapper search">
                             <div onclick="modalAction('.search')" class="anywhere-away"></div>
 
-                            <!-- change this -->
                             <div class="modal-main">
                                 <div class="wrapper-close-btn" onclick="modalAction('.search')">
                                     <span>
@@ -61,16 +60,16 @@
                                 </div>
                                 <div class="wrapper-main">
                                     <div class="search-section">
-                                        <input type="text" placeholder="Search Products.........">
+                                        <input type="text" id="searchText" placeholder="Search Products.........">
                                         <div class="divider"></div>
-                                        <a href="#" class="shop-btn">Search</a>
+                                        <a href="#" class="shop-btn" onclick="redirectToSearch()">Search</a>
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- change this -->
-
                         </div>
+
+                   
+
                     </div>
 
                     <div class="header-cart">
@@ -107,7 +106,7 @@
                     </svg>
                 </span>
             </button>
-            <a href="index.html" class="mobile-header-logo">
+            <a href="/" class="mobile-header-logo">
                 <img src="./assets/images/logos/logo.webp" alt="logo">
             </a>
             <a href="cart.html" class="header-cart cart-item">
@@ -246,7 +245,7 @@
 
                     <ul class="menu-list">
                         <li>
-                            <a href="index.html">
+                            <a href="/">
                                 <span class="list-text">Home</span>
                             </a>
                         </li>
