--- a/E-Commerce.UI.WEB/Views/Shared/_UserDashboardMenu.cshtml
+++ b/E-Commerce.UI.WEB/Views/Shared/_UserDashboardMenu.cshtml
@@ -9,23 +9,29 @@
         </span>
         <span class="text">Dashboard</span>
     </a>
+    <a href="/AccountUpdate">
+        <span>
+            <ion-icon name="apps-outline"></ion-icon>
+        </span>
+        <span class="text">My Information</span>
+    </a>
     <a href="/MyOrder">
         <span>
             <ion-icon name="cube-outline"></ion-icon>
         </span>
         <span class="text">My Order</span>
     </a>
-    <a href="#">
+    <a href="/AccountDelete">
         <span>
-            <ion-icon name="cube-outline"></ion-icon>
+            <ion-icon name="trash-outline"></ion-icon>
         </span>
-        <span class="text">Dashboard</span>
+        <span class="text">AccountDelete</span>
     </a>
 
 
 
     <div class="nav-link">
-        <a href="login.html">
+        <a href="/Logout">
             <span>
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
                      xmlns="http://www.w3.org/2000/svg">
