--- a/E-Commerce.UI.WEB/Views/Basket/Index.cshtml
+++ b/E-Commerce.UI.WEB/Views/Basket/Index.cshtml
@@ -59,7 +59,7 @@
                             <td class="table-wrapper wrapper-product">
                                 <div class="wrapper">
                                     <div class="wrapper-img">
-                                        <img src="./assets/images/homepage-one/product-img/product-img-1.webp"
+                                        <img src="@item.Product.ImageUrl"
                                              alt="img">
                                     </div>
                                     <div class="wrapper-content">
