--- a/E-Commerce.UI.WEB/Views/Shared/_HeaderLogin.cshtml
+++ b/E-Commerce.UI.WEB/Views/Shared/_HeaderLogin.cshtml
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="header-center">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="./assets/images/logos/logo.webp" alt="logo">
                     </a>
                 </div>
@@ -95,7 +95,7 @@
                     </svg>
                 </span>
             </button>
-            <a href="index.html" class="mobile-header-logo">
+            <a href="/" class="mobile-header-logo">
                 <img src="./assets/images/logos/logo.webp" alt="logo">
             </a>
             <a href="cart.html" class="header-cart cart-item">
@@ -233,7 +233,7 @@
 
                     <ul class="menu-list">
                         <li>
-                            <a href="index.html">
+                            <a href="/">
                                 <span class="list-text">Home</span>
                             </a>
                         </li>
